# books-fastapi-project

./: pyproject.toml
app/: main.py
app/crud/: crud.py
app/database/: database.py
app/models/: models.py
app/schemas/: schemas.py
